# compliance-as-code-agent

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: compliance.yml
bd-coach/: .gitignore  ACCOUNTS_CHECKLIST.md  ARCHITECTURE.md  PUBLISHING.md  README.md
bd-coach/bd-coach-config/: .gitignore  CODEOWNERS  README.md
bd-coach/bd-coach-config/.github/workflows/: ci.yml
bd-coach/bd-coach-config/.woodpecker/: ci.yaml
bd-coach/bd-coach-config/cards/: commission_snapshot.json  deal_stage_moved.json  gate_met_celebration.json  gate_miss_alert_ceo.json  stale_deal.json  weekly_submit_confirmation.json
bd-coach/bd-coach-config/dlp/: restricted_hr_comp.yaml  run_tests.py  test_fixtures.yaml
bd-coach/bd-coach-config/knowledge/: sources.yaml
bd-coach/bd-coach-config/personas/: personas.yaml
bd-coach/bd-coach-config/prompts/: bd_coach.v1.0.md
bd-coach/bd-coach-config/topics/: topics.yaml
bd-coach/bd-coach-infra/: .env.example  .gitignore  README.md
bd-coach/bd-coach-infra/.github/workflows/: deploy.yml
bd-coach/bd-coach-infra/.woodpecker/: ci.yaml
bd-coach/bd-coach-infra/compose/: docker-compose.gpu.yml  docker-compose.hostinger.yml  docker-compose.slim.yml  docker-compose.yml
bd-coach/bd-coach-infra/docs/: HOSTINGER.md
bd-coach/bd-coach-infra/keycloak/: realm-export.json
bd-coach/bd-coach-infra/librechat/: librechat.yaml
bd-coach/bd-coach-infra/litellm/: config.hostinger.yaml  config.yaml
bd-coach/bd-coach-infra/litellm/hooks/: __init__.py  audit_hook.py  dlp_hook.py
bd-coach/bd-coach-infra/observability/: prometheus.yml
bd-coach/bd-coach-infra/postgres/init/: 01-databases.sh
bd-coach/bd-coach-infra/scripts/: bootstrap.sh  install-hostinger.sh
bd-coach/n8n-flows/: README.md
bd-coach/n8n-flows/.github/workflows/: ci.yml
bd-coach/n8n-flows/flows/: F1_weekly_template_push.json  F2_friday_sweep.json  F3_hygiene_audit.json  F4_gate_watchdog.json  F5_ceo_monday_digest.json  F6_commission_accrual.json  F7_deal_stage_trigger.json  F8_monthly_1pager.json
bd-coach/scripts/: publish-init-repos.sh
crates/cac-cli/: Cargo.toml
crates/cac-cli/src/: main.rs
crates/cac-core/: Cargo.toml
crates/cac-core/src/: audit.rs  lib.rs  policy.rs  violation.rs
crates/cac-fixer/: Cargo.toml
crates/cac-fixer/src/: lib.rs
crates/cac-scanner/: Cargo.toml
crates/cac-scanner/src/: lib.rs  rules.rs
crates/cac-validator/: Cargo.toml
crates/cac-validator/src/: lib.rs
crates/cac-webhook/: Cargo.toml
crates/cac-webhook/src/: config.rs  git.rs  handler.rs  lib.rs  payload.rs  provider.rs  server.rs  signature.rs
docs/: CLOUD_CUSTODIAN_STUDY.md  WEBHOOK_SETUP.md
examples/violations/: sample.rs
policies/: gdpr-data-tagging.yaml  no-hardcoded-secrets.yaml  soc2-audit-trails.yaml
tech-economist/: .gitignore  PUBLISHING.md  README.md  start.sh
tech-economist/backend/: requirements.txt
tech-economist/backend/app/: database.py  main.py  models.py  schemas.py  seed.py
tech-economist/backend/app/routers/: api.py
tech-economist/backend/app/services/: analytics.py  benchmarks.py  canonical_usage.py  pricing.py  tokencost_service.py  usage_ingest.py
tech-economist/frontend/: index.html  package-lock.json  package.json
tech-economist/frontend/src/: App.tsx  api.ts  index.css
tech-economist/scripts/: publish-init-repo.sh  publish-push.sh  test_oi_integration.sh
